# stache

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md
design/: Stachmu compiling.bpmn
examples/: compile.rs
mustache/: Cargo.toml  mustache.toml
mustache/examples/: compile.rs  generate.rs  handwritten.rs  pool.rs  sample.mustache
mustache/src/: engine.rs  lib.rs  main.rs  rule.rs  toolkit.rs  writer.rs
mustache/tests/: lib.rs
rules/: mustache.yaml  stachemu.yaml
samples/: interpolation.json  interpolation.mustache  sample.mustache  skeleton.rs
specs/stachemu/: interpolation.yml
src/: command.rs  compiler.rs  error.rs  expr.rs  generator.rs  lib.rs  main.rs  processor.rs  rule.rs  spec.rs  specs.rs  status.rs  test.rs
src/compiling/: compiler.rs  matcher.rs  mod.rs
src/engines/: mod.rs  mustache.rs  processor.rs  stachemu.rs
src/execution/: error.rs  mod.rs
src/implementations/: mod.rs
src/implementations/mustache/: engine.rs  mod.rs  rule.rs
src/specs/: mod.rs  mustache.rs  pool.rs  spec.rs
stache/: Cargo.toml
stache/examples/: compile.rs  stachemu_pool.rs
stache/src/: descriptor.rs  expr.rs  file.rs  lib.rs  rule.rs  status.rs  template.rs
stache/src/compiling/: compiler.rs  error.rs  matcher.rs  mod.rs  parser.rs  rule_compiler.rs  trailer.rs
stache/src/execution/: engine.rs
stache/src/rendering/: engine.rs  error.rs  mod.rs  writer.rs
stache/src/specs/: mod.rs  pool.rs  spec.rs
stache/src/testing/: mod.rs  pool.rs  spec.rs
stache_derive/: Cargo.toml
stache_derive/src/: directive.rs  lib.rs
stachemu/: Cargo.toml  Stachemu.toml
stachemu/examples/: dotted.rs  pool.rs
stachemu/spec/: interpolation.yml
stachemu/src/: engine.rs  lib.rs  main.rs  toolkit.rs  writer.rs
stachemu/tests/: lib.rs
tests/: lib.rs
