[package]
name = "mustache"
version = "0.0.1"
authors = ["team-chiru@protonmail.com"]
license = "MIT/Apache-2.0"

[[bin]]
name = "mustache"

[dependencies]
serde = "*"
serde_derive ="*"
serde_json = "*"
toml = "*"
stache = { path = "../stache" }

[dev-dependencies]
stainless = "*" # TODO rustup default beta
