[package]
name = "stache_derive"
description = "stache's derive macro"
repository = "https://github.com/team-chiru/stachemu"
version = "0.0.1"
authors = ["team-chiru@protonmail.com"]
license = "MIT/Apache-2.0"

[lib]
name = "stache_derive"
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.11"
stache = { path = "../stache", version = "*" }
toml = "0.4"
serde ="*"
serde_derive ="*"
